apps/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: examiner
  namespace: apps
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: examiner
                port:
                  number: 80
            path: /examine
            pathType: Prefix
